# HexaGen

./: .gitignore  LICENSE  README.md  cleanup_results.py  collect_larc_results.py  error_types.md  main.py  merged_batch_output.jsonl  merged_batch_output2.jsonl  minimal_hexagen.py  minimal_hexagen_api_spec.txt  pyproject.toml  test_minimal.py
Shira Presentation/: gen_plots.py
cadquery_exp/: cq_dataset.py  cq_executor.py  cq_experiment.py  cq_metrics.py  cq_validate.py
configs/: cq_experiment.yaml  example_suite.yaml  suite.yaml  suite_qwen.yaml  suite_qwen_claude_code.yaml
constants/: __init__.py  constants.py
data/: 2022_01_19_hexagon_dataset_extended_public_hard1_dev_abstraction.jsonl  2022_01_19_hexagon_dataset_extended_public_hard1_test.jsonl  2022_01_19_hexagon_dataset_extended_public_hard1_train.jsonl  4-samples-dev.jsonl  4-samples-dev_standard.jsonl  4-samples.jsonl  4-samples_standard.jsonl  api_documentation.txt  api_documentation_01.txt  code_step_full_user_message_template.txt  code_system_prompt.txt  code_user_message.txt  code_user_message_template.txt  code_with_vision_system_prompt.txt  hexagen_api_spec.txt  instructions.txt  larc_api_spec.txt  larc_api_spec_v1.txt  larc_code_full_system_prompt.txt  larc_code_full_user_message.txt  larc_code_full_v1_system_prompt.txt  larc_python_system_prompt.txt  larc_python_user_message.txt  larc_shared_system_prompt.txt  larc_tiles_system_prompt.txt  larc_tiles_user_message.txt  python_system_prompt.txt  python_user_message.txt  shared_system_prompt.txt  system_prompt_01.txt  system_prompt_tiles.txt  (+6 more)
(+455 files in other folders)
